# libyadisk

./: CMakeLists.txt
cmake/modules/: FindJsonC.cmake  FindNeon.cmake
src/: yadisk.h  yadisk_api_internal.c  yadisk_api_internal.h  yadisk_get_disk.c  yadisk_get_disk.h  yadisk_get_disk_resources.c  yadisk_get_disk_resources.h  yadisk_shared.c  yadisk_shared.h  yandex_disk_api.c  yandex_disk_api.h
tests/: app.c
